--- a/Backend/views/kassa.pug
+++ b/Backend/views/kassa.pug
@@ -7,5 +7,6 @@ html(lang="en")
         title Document
     body 
 
-        form(action="https://jam",method="POST") 
-            input(type="text" )
+        form(action="/save_data",method="POST") 
+            input(type="text",placeholder="Summani kirit",name="amount")
+            input(type="submit",value="Pul tashlash")
