--- a/Backend/views/payme.pug
+++ b/Backend/views/payme.pug
@@ -8,9 +8,9 @@ html(lang="en")
     body 
         form(method='POST', action='https://test.paycom.uz')
   
-            input(type='hidden', name='merchant', value='{Merchant ID}')
-            input(type='hidden', name='amount', value='{сумма чека в ТИИНАХ}')
-            input(type='hidden', name='account[{field_name}]', value='{field_value}')
+            input(type='hidden', name='merchant', value=`${merchant_id}`)
+            input(type='hidden', name='amount', value=`${data.amount*100}`)
+            input(type='hidden', name=`account[id]`, value=`${data.account}`)
 
             input(type='hidden', name='lang', value='ru')
  
@@ -21,6 +21,4 @@ html(lang="en")
             input(type='hidden', name='description', value='{Описание платежа}')
  
             input(type='hidden', name='detail', value='{JSON объект детализации в BASE64}')
-            button(type='submit')
-             | &Ocy;&pcy;&lcy;&acy;&tcy;&icy;&tcy;&softcy; &scy; &pcy;&ocy;&mcy;&ocy;&shchcy;&softcy;&yucy; 
-              b Payme
+            button(type='submit') PayMe
